Fix: now the downloading of git and make is a systemd service and thus works reliably

--- a/git-and-make.service
+++ b/git-and-make.service
@@ -1,9 +1,8 @@
 [Unit]
 Description=git and make
+After=reflector.service
 
 [Service]
-After=multi-user.target
-Type=oneshot
 RemainAfterExit=yes
 ExecStart=pacman -Sy --noconfirm make git
 
